--- a/Develop/index.html
+++ b/Develop/index.html
@@ -24,10 +24,12 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
+    <div class="hero">
+        <img src="./assets/images/digital-marketing-meeting.jpg" alt="A digital marketing meeting with several team members around a table strewn with papers"/>
+    </div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A desk with a coffe mug, a laptop, a cup of colored pencils and markers, and a notebook with several words related to SEO, such as link building, social media and mobile compatibility" />
             <h2>Search Engine<br>Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are 
@@ -42,7 +44,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A person sitting at a desk holding a cell phone while looking at a laptop with line and circle graphs under the heading Reputation"/>
             <h2>Online Reputation<br>Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative.
@@ -57,7 +59,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="A social media team around a table filled with a laptop, tablets, and cutouts featuring music, camera, search and other related icons along with the words Like, Tweet, Share and Media"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits.
@@ -73,21 +75,21 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt=""/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt=""/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt=""></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
